<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/group_1">
        <item
            android:id="@+id/nav_new_photos"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/new_photos"/>
        <item
            android:id="@+id/nav_popular"
            android:icon="@drawable/ic_menu_popular"
            android:title="@string/popular"/>
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_menu_search"
            android:title="@string/find"/>
    </group>

    <group
        android:checkableBehavior="single"
        android:id="@+id/group_2">
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send_to_friends"/>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/about_app"/>

    </group>

</menu>
